fix vote cards on mobile.

--- a/src/pages/VIsitProfile/VIsitProfile.css
+++ b/src/pages/VIsitProfile/VIsitProfile.css
@@ -15,3 +15,21 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 450px) {
+    .story-list {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 90%;
+    }
+
+    .story{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .vote-list{
+        width: 100%;
+    }
+}
